Changelog
=========

1.1 (unreleased)
----------------

- Removed language specific subjects for order mails from settings and handle
  translation with i18n.


1.0 (2011-02-25)
----------------

- Initial release.